--- a/src/app/sumula-cadastro/sumula-cadastro.component.html
+++ b/src/app/sumula-cadastro/sumula-cadastro.component.html
@@ -231,7 +231,7 @@
         </div>
 
 
-        <button class="btn btn-success" (click)="onClickInserirRelacaoMandante()">Incluir</button>
+        <button class="btn btn-success" type="button" (click)="onClickInserirRelacaoMandante()">Incluir</button>
     </div>
 
 
@@ -322,7 +322,7 @@
         </div>
 
 
-        <button class="btn btn-success" (click)="onClickInserirRelacaoVisitante()">Incluir</button>
+        <button class="btn btn-success"  type="button" (click)="onClickInserirRelacaoVisitante()">Incluir</button>
     </div>
 
 
