--- a/src/app/arbitro-cadastro/arbitro-cadastro.component.html
+++ b/src/app/arbitro-cadastro/arbitro-cadastro.component.html
@@ -33,8 +33,9 @@
             </div>
     
             <div class="form-group col-md-6">
-                <input type="number" number class="form-control" name="cpf" id="cpf" placeholder="CPF" 
-                required #cpf="ngModel" [(ngModel)]="arbitro.cpf">
+                <input type="text" class="form-control" name="cpf" id="cpf" placeholder="CPF" 
+                required #cpf="ngModel" [(ngModel)]="arbitro.cpf"
+                onkeypress="return event.charCode >= 48 && event.charCode <= 57">               
             </div>
 
             <div class="form-group col-md-6">
