--- a/src/app/atleta-cadastro/atleta-cadastro.component.html
+++ b/src/app/atleta-cadastro/atleta-cadastro.component.html
@@ -21,8 +21,9 @@
             </div>
     
             <div class="form-group col-md-6">
-                <input type="number" number class="form-control" name="cpf" id="cpf" placeholder="CPF" 
-                required #cpf="ngModel" [(ngModel)]="atleta.cpf">
+                <input type="text" class="form-control" name="cpf" id="cpf" placeholder="CPF" 
+                required #cpf="ngModel" [(ngModel)]="atleta.cpf"
+                onkeypress="return event.charCode >= 48 && event.charCode <= 57">
             </div>
 
             <div class="form-group col-md-6">
