--- a/src/app/sumula-visualizacao/sumula-visualizacao.component.html
+++ b/src/app/sumula-visualizacao/sumula-visualizacao.component.html
@@ -1,1 +1,188 @@
-<p>sumula-visualizacao works!</p>
+<div class="campo_cadastro">
+    <p class="texto_titulo_cadastro">
+        Dados da Partida
+    </p>    
+    
+    <div class="form-group">
+        <div class="form-group col-md-12">
+            <h3>
+                <label class="control-label">Resultado Final</label>
+                {{sumula.mandante}} 
+                {{sumula.placarMandante}} x {{sumula.placarVisitante}}
+                 {{sumula.visitante}}
+            </h3>
+        </div>
+
+        <div class="form-group row">  
+            <div class="col-sm-6">
+                <label class="control-label">Data e Hora da Partida</label>
+                <p>{{sumula.data}}</p>
+            </div>    
+            <div class="col-sm-6">
+                <label class="control-label">Local da Partida</label>
+                <p>{{sumula.estadio}} - {{sumula.cidade}}</p>
+            </div>          
+        </div>
+    </div>
+</div>
+
+<div class="campo_cadastro">
+    <p class="texto_titulo_cadastro">
+        Cronologia
+    </p>
+
+    <div class="form-group">
+        <div class="form-group row">           
+            <div class="col-sm-3">
+                <label class="control-label">Entrada Mandante</label>
+                {{entradaMandante}}
+            </div>
+            <div class="col-sm-3">
+                <label class="control-label">Entrada Visitante</label>
+                {{entradaVisitante}}
+            </div>
+            <div class="col-sm-3">
+                <label class="control-label">Início da Partida</label>
+                {{inicioPrimeiroTempo}}
+            </div>
+            <div class="col-sm-3">
+                <label class="control-label">Fim do Primeiro Tempo</label>
+                {{fimPrimeiroTempo}}
+            </div>
+        </div>
+
+        <div class="form-group row">           
+            <div class="col-sm-3">
+                <label class="control-label">Retorno Mandante</label>
+                {{retornoMandante}}
+            </div>
+            <div class="col-sm-3">
+                <label class="control-label">Retorno Visitante</label>
+                {{retornoVisitante}}
+            </div>
+            <div class="col-sm-3">
+                <label class="control-label">Início do Segundo Tempo</label>
+                {{inicioSegundoTempo}}
+            </div>
+            <div class="col-sm-3">
+                <label class="control-label">Fim da Partida</label>
+                {{fimSegundoTempo}}
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="campo_cadastro">
+    <p class="texto_titulo_cadastro">
+        Arbitragem
+    </p>    
+    
+    <div class="form-group">
+        <div class="form-group row">
+            <div class="col-sm-12">
+                <label class="control-label">Árbitro</label>
+                <p>{{sumula.arbitro}}</p>
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-sm-6">
+                <label class="control-label">Assistente 1</label>
+                <p>{{sumula.assistente1}}</p>
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-sm-6">
+                <label class="control-label">Árbitro</label>
+                <p>{{sumula.assistente2}}</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="campo_cadastro">
+    <p class="texto_titulo_cadastro">
+        Escalação Equipe Mandante
+    </p> 
+
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">Número</th>
+                <th scope="col">Atleta</th>
+                <th scope="col">T/R</th>
+                <th scope="col">Gols</th>
+                <th scope="col">Cartões</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let relacao of relacoesMandante">                           
+                <td>{{relacao.numero}}</td>
+                <td>{{relacao.nome}}</td>
+                <td>{{relacao.titular}}</td>
+                <td>{{relacao.gols}}</td>
+                <td>{{relacao.cartoes}}
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+
+<div class="campo_cadastro">
+    <p class="texto_titulo_cadastro">
+        Escalação Equipe Visitante
+    </p> 
+
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">Número</th>
+                <th scope="col">Atleta</th>
+                <th scope="col">T/R</th>
+                <th scope="col">Gols</th>
+                <th scope="col">Cartões</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let relacao of relacoesVisitante">                           
+                <td>{{relacao.numero}}</td>
+                <td>{{relacao.nome}}</td>
+                <td>{{relacao.titular}}</td>
+                <td>{{relacao.gols}}</td>
+                <td>{{relacao.cartoes}}
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+
+<div class="campo_cadastro">
+    <p class="texto_titulo_cadastro">
+        Relatórios
+    </p>    
+    
+    <div class="form-group">
+
+        <div class="form-group col-md-12">
+            <label class="control-label">Relatório Expulsões</label>
+        </div>
+
+        <div class="form-group col-md-12">
+            {{sumula.relatorioExpulsoes}}
+        </div>
+
+        <div class="form-group col-md-12">
+            <label class="control-label">Relatório Observações</label>
+        </div>
+
+        <div class="form-group col-md-12">
+            {{sumula.relatorioObservacoes}}
+        </div>
+    </div>
+
+    <p>
+        <button class="btn btn-primary" type="button">Imprimir em PDF</button> 
+    </p>
+    <p>
+        <a class="btn btn-danger" routerLink="/sumula">Voltar</a>
+    </p>
+</div>         
