--- a/src/app/sumula-visualizacao/sumula-visualizacao.component.html
+++ b/src/app/sumula-visualizacao/sumula-visualizacao.component.html
@@ -6,16 +6,13 @@
     <div class="form-group">
         <div class="form-group col-md-12">
             <h3>
-                <label class="control-label">Resultado Final</label>
-                {{sumula.mandante}} 
-                {{sumula.placarMandante}} x {{sumula.placarVisitante}}
-                 {{sumula.visitante}}
+                {{sumula.mandante}} {{sumula.placarMandante}} x {{sumula.placarVisitante}} {{sumula.visitante}}                
             </h3>
         </div>
 
         <div class="form-group row">  
             <div class="col-sm-6">
-                <label class="control-label">Data e Hora da Partida</label>
+                <label class="control-label">Data e Hora da Partida:</label>
                 <p>{{sumula.data}}</p>
             </div>    
             <div class="col-sm-6">
@@ -35,38 +32,38 @@
         <div class="form-group row">           
             <div class="col-sm-3">
                 <label class="control-label">Entrada Mandante</label>
-                {{entradaMandante}}
+                <p>{{sumula.entradaMandante}}</p>
             </div>
             <div class="col-sm-3">
                 <label class="control-label">Entrada Visitante</label>
-                {{entradaVisitante}}
+                <p>{{sumula.entradaVisitante}}</p>
             </div>
             <div class="col-sm-3">
                 <label class="control-label">Início da Partida</label>
-                {{inicioPrimeiroTempo}}
+                <p>{{sumula.inicioPrimeiroTempo}}</p>
             </div>
             <div class="col-sm-3">
                 <label class="control-label">Fim do Primeiro Tempo</label>
-                {{fimPrimeiroTempo}}
+                <p>{{sumula.fimPrimeiroTempo}}</p>
             </div>
         </div>
 
         <div class="form-group row">           
             <div class="col-sm-3">
                 <label class="control-label">Retorno Mandante</label>
-                {{retornoMandante}}
+                <p>{{sumula.retornoMandante}}</p>
             </div>
             <div class="col-sm-3">
                 <label class="control-label">Retorno Visitante</label>
-                {{retornoVisitante}}
+                <p>{{sumula.retornoVisitante}}</p>
             </div>
             <div class="col-sm-3">
                 <label class="control-label">Início do Segundo Tempo</label>
-                {{inicioSegundoTempo}}
+                <p>{{sumula.inicioSegundoTempo}}</p>
             </div>
             <div class="col-sm-3">
                 <label class="control-label">Fim da Partida</label>
-                {{fimSegundoTempo}}
+                <p>{{sumula.fimSegundoTempo}}</p>
             </div>
         </div>
     </div>
@@ -167,7 +164,9 @@
         </div>
 
         <div class="form-group col-md-12">
-            {{sumula.relatorioExpulsoes}}
+            <div class="campo_cadastro">
+                {{sumula.relatorioExpulsoes}}
+            </div>
         </div>
 
         <div class="form-group col-md-12">
@@ -175,7 +174,9 @@
         </div>
 
         <div class="form-group col-md-12">
-            {{sumula.relatorioObservacoes}}
+            <div class="campo_cadastro">
+                {{sumula.relatorioObservacoes}}
+            </div>
         </div>
     </div>
 
