--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
 .ng-invalid.ng-touched:not(form)
 {
-    border: 1px solid red;
+    border-left: 5px solid red;
+}
+
+.ng-valid[required], .ng-valid.required  
+{
+    border-left: 5px solid green 
 }
 
 .titulo_site
