--- a/src/styles.css
+++ b/src/styles.css
@@ -52,7 +52,7 @@
     margin: auto;
     margin-top: 100px;
     width: 80%;
-    border: 4px solid lightgray;
+    border: 4px solid green;
     border-radius: 20px;
 }
 
@@ -62,7 +62,7 @@
     margin: auto;
     margin-top: 20px;
     width: 90%;
-    border: 4px solid lightgray;
+    border: 4px solid green;
     border-radius: 20px;
 }
 
@@ -72,7 +72,7 @@
     margin: auto;
     margin-top: 20px;
     width: 90%;
-    border: 4px solid lightgray;
+    border: 4px solid green;
     border-radius: 20px;
 }
 
