--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
                 <a class="nav-item nav-link" routerLink="/clube">Cadastro Clubes</a>
                 <a class="nav-item nav-link" routerLink="/atleta">Cadastro Atletas</a>
                 <a class="nav-item nav-link" routerLink="/sumula">Cadastro Súmula Eletrônica</a>
-                <a class="nav-item nav-link" href="#">
+                <a class="nav-item nav-link" routerLink="">
                     <p class="texto_botao_sair">
                         Sair 
                     </p>
