--- a/src/styles.css
+++ b/src/styles.css
@@ -29,6 +29,14 @@
     max-width: 180px;
 }
 
+.img_login
+{
+    max-width: 150px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
+}
+
 .texto_botao_sair
 {
     color: red;
@@ -82,6 +90,17 @@
     margin: auto;
     margin-top: 20px;
     width: 90%;
+    border: 4px solid green;
+    border-radius: 20px;
+}
+
+.login
+{
+    padding: 20px;
+    margin: auto;
+    margin-top: 20px;
+    width: auto;
+    max-width: 500px;
     border: 4px solid green;
     border-radius: 20px;
 }
