header recebe arbitro logado & debug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,1 @@
-<header>
-  <div class="navbar navbar-expand-lg navbar-dark bg-success">
-          <img class="img_logo" src="../assets/img/logo_transp.png" alt="logo" title="logo"> 
-          <p class="titulo_site">
-              Súmula eletrônica para jogos amadores
-          </p>  
-      </div>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-success"> 
-          <div class="header_nav">              
-              <div class="navbar-nav">                       
-                <a class="nav-item nav-link" routerLink="/arbitro">Cadastro Árbitros</a>
-                <a class="nav-item nav-link" routerLink="/clube">Cadastro Clubes</a>
-                <a class="nav-item nav-link" routerLink="/atleta">Cadastro Atletas</a>
-                <a class="nav-item nav-link" routerLink="/sumula">Cadastro Súmula Eletrônica</a>
-                <a class="nav-item nav-link" routerLink="">
-                    <p class="texto_botao_sair">
-                        Sair 
-                    </p>
-                </a>
-              </div>      
-          </div>            
-      </nav>
-</header>
-
-<div class="container">
-    <router-outlet></router-outlet>
-</div>
-
-
-<footer>
-    <p class="p-3 mb-2 bg-success text-white">
-        Súmula Eletrônica para Jogos Amadores - Desenvolvido por: Esp. Fábio Almeida - Senai 2019
-    </p>
-</footer>
+<app-header></app-header>
