remocao do nav quando logoff

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
         </div>
         
         <p>
-            <button class="btn btn-success" [disabled]="!formulario.valid" type="submit">Salvar</button>          
+            <button class="btn btn-success" [disabled]="!formulario.valid" type="submit">Entrar</button>          
         </p>
         <p>
             <button class="btn btn-danger" type="button"(click)="onClickLimpar()">
