troca de place holder

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
         <div class="form-group">
             <div class="form-group col-md-12">
                 <label for="usuario" class="control-label">Usuário:</label>
-                <input type="text" class="form-control" name="usuario" id="usuario" placeholder="Usuário" 
+                <input type="text" class="form-control" name="usuario" id="usuario" placeholder="CPF" 
                 required #usuario="ngModel" [(ngModel)]="login.usuario">
             </div>
         </div>
