criado login service

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
             Súmula eletrônica para jogos amadores
         </p>  
     </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success" *ngIf="mostrarBarra"> 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success" *ngIf="arbitroLogado.nome"> 
         <div class="header_nav">              
             <div class="navbar-nav">                       
                 <a class="nav-item nav-link" routerLink="/arbitro">Cadastro Árbitros</a>
