--- a/src/app/clube-cadastro/clube-cadastro.component.html
+++ b/src/app/clube-cadastro/clube-cadastro.component.html
@@ -45,6 +45,18 @@
                 <input type="text" class="form-control" name="cep" id="cep" 
                 placeholder="CEP" (blur)="verificaCep()" onkeypress="return event.charCode >= 48 && event.charCode <= 57"
                 required #cep="ngModel" [(ngModel)]="clube.cep">
+            </div>           
+        </div>
+
+        <div class="form-group">
+            <div class="form-group col-md-6">
+                <label class="control-label">Rua: {{endereco.logradouro}}</label>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="form-group col-md-6">
+                <label class="control-label">Bairro: {{endereco.bairro}}</label>
             </div>
         </div>
 
