--- a/src/app/clube-cadastro/clube-cadastro.component.html
+++ b/src/app/clube-cadastro/clube-cadastro.component.html
@@ -50,7 +50,7 @@
 
         <div class="form-group">
             <div class="form-group col-md-6">
-                <label class="control-label">Rua: {{endereco.logradouro}}</label>
+                <label class="control-label">Logradouro: {{endereco.logradouro}}</label>
             </div>
         </div>
 
