--- a/src/app/sumula-cadastro/sumula-cadastro.component.html
+++ b/src/app/sumula-cadastro/sumula-cadastro.component.html
@@ -327,7 +327,71 @@
     </div>
 
 
+    <div class="campo_cadastro">
+        <p class="texto_titulo_cadastro">
+            Substituições da Equipe Mandante
+        </p> 
 
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Período</th>
+                    <th scope="col">Tempo</th>
+                    <th scope="col">Entrou</th>
+                    <th scope="col">Saiu</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let substituicao of sumula.substituicoesMandante">                           
+                    <td>
+                        <button class="btn btn-danger" 
+                        (click)="onClickExcluirSubstituicaoMandante(substituicao.entra)">X</button>
+                    </td>
+                    <td>{{substituicao.periodo}}</td>
+                    <td>{{substituicao.tempo}}</td>
+                    <td>{{substituicao.entra}}</td>
+                    <td>{{substituicao.sai}}</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <p class="texto_titulo_cadastro">
+            Incluir Substituição na Equipe Mandante
+        </p> 
+        
+        <div class="form-group row">
+            <div class="form-group col-md-4">
+                <label for="periodo">Período</label>
+                <select id="periodo" class="form-control" id="periodo" name="periodo"
+                #periodo="ngModel" [(ngModel)]="inserirSubstituicaoMandante.periodo">
+                    <option value="1T">1T: Primeiro Tempo</option>
+                    <option value="INT">Intervalo</option>
+                    <option value="2T">2T: Segundo Tempo</option>
+                </select>
+            </div> 
+
+            <div class="col-sm-2">  
+                <label for="tempo">Tempo</label>             
+                <input type="number" number class="form-control" name="tempo" 
+                id="tempo" #tempo="ngModel" [(ngModel)]="inserirSubstituicaoMandante.tempo">
+            </div> 
+            
+            <div class="col-sm-2">  
+                <label for="entra">Entrou</label>             
+                <input type="number" number class="form-control" name="entra" 
+                id="entra" #entra="ngModel" [(ngModel)]="inserirSubstituicaoMandante.entra">
+            </div>  
+
+            <div class="col-sm-2">  
+                <label for="sai">Saiu</label>             
+                <input type="number" number class="form-control" name="sai" 
+                id="sai" #sai="ngModel" [(ngModel)]="inserirSubstituicaoMandante.sai">
+            </div> 
+        </div>
+
+        <button class="btn btn-success"  type="button" (click)="onClickInserirSubstituicaoMandante()">Incluir</button>
+    </div>
 
 
     <div class="campo_cadastro">
